# lavaplayer

./: .editorconfig  .git-blame-ignore-revs  .gitignore  CHANGELOG.md  FAQ.md  README.md  build.gradle  build.gradle.kts  jitpack.yml  settings.gradle  settings.gradle.kts
.github/workflows/: build-natives.yml  build.yml  publish.yml  release.yml
common/: build.gradle.kts
common/src/main/java/: module-info.java
common/src/main/java/com/sedmelluq/lava/common/natives/: NativeLibraryBinaryProvider.java  NativeLibraryLoader.java  NativeLibraryProperties.java  ResourceNativeLibraryBinaryProvider.java  SystemNativeLibraryProperties.java
common/src/main/java/com/sedmelluq/lava/common/natives/architecture/: DefaultArchitectureTypes.java  DefaultOperatingSystemTypes.java  SystemType.java
common/src/main/java/com/sedmelluq/lava/common/tools/: DaemonThreadFactory.java  ExecutorTools.java
demo-d4j/: build.gradle
demo-d4j/src/main/java/com/sedmelluq/discord/lavaplayer/demo/d4j/: D4jAudioProvider.java  GuildMusicManager.java  Main.java  TrackScheduler.java
demo-jda/: build.gradle
demo-jda/src/main/java/com/sedmelluq/discord/lavaplayer/demo/jda/: AudioPlayerSendHandler.java  GuildMusicManager.java  Main.java  TrackScheduler.java
extensions/format-xm/: build.gradle  build.gradle.kts
extensions/format-xm/src/main/java/: module-info.java
extensions/youtube-rotator/: build.gradle.kts
extensions/youtube-rotator/src/main/java/: module-info.java
extensions/youtube-rotator/src/main/java/com/sedmelluq/lava/extensions/youtuberotator/: YoutubeIpRotatorFilter.java  YoutubeIpRotatorRetryHandler.java  YoutubeIpRotatorSetup.java
main/: build.gradle  build.gradle.kts
main/src/main/java/: module-info.java
main/src/main/java/com/sedmelluq/discord/lavaplayer/container/: MediaContainer.java  MediaContainerDetection.java  MediaContainerDetectionResult.java  MediaContainerHints.java  MediaContainerProbe.java  MediaContainerRegistry.java
main/src/main/java/com/sedmelluq/discord/lavaplayer/container/adts/: AdtsAudioTrack.java  AdtsPacketHeader.java  AdtsStreamProvider.java  AdtsStreamReader.java
main/src/main/java/com/sedmelluq/discord/lavaplayer/container/common/: AacPacketRouter.java  OpusPacketRouter.java
main/src/main/java/com/sedmelluq/discord/lavaplayer/container/flac/: FlacAudioTrack.java  FlacContainerProbe.java  FlacFileLoader.java  FlacMetadataReader.java  FlacSeekPoint.java  FlacStreamInfo.java  FlacTrackInfo.java  FlacTrackInfoBuilder.java  FlacTrackProvider.java
main/src/main/java/com/sedmelluq/discord/lavaplayer/container/matroska/: MatroskaAacTrackConsumer.java  MatroskaAudioTrack.java  MatroskaContainerProbe.java  MatroskaOpusTrackConsumer.java  (+3 more)
main/src/main/java/com/sedmelluq/discord/lavaplayer/filter/: AudioFilter.java  AudioFilterChain.java  AudioPipelineFactory.java  AudioPostProcessor.java  ChannelCountPcmAudioFilter.java  FilterChainBuilder.java  FinalPcmAudioFilter.java  FloatPcmAudioFilter.java  PcmFilterFactory.java  PcmFormat.java  ResamplingPcmAudioFilter.java  ShortPcmAudioFilter.java  SplitShortPcmAudioFilter.java  UserProvidedAudioFilters.java
main/src/main/java/com/sedmelluq/discord/lavaplayer/format/: AudioDataFormat.java  AudioDataFormatTools.java  AudioPlayerInputStream.java  OpusAudioDataFormat.java  Pcm16AudioDataFormat.java  StandardAudioDataFormats.java
main/src/main/java/com/sedmelluq/discord/lavaplayer/natives/: ConnectorNativeLibLoader.java
main/src/main/java/com/sedmelluq/discord/lavaplayer/player/: AudioLoadResultHandler.java  AudioPlayer.java  AudioPlayerLifecycleManager.java  AudioPlayerManager.java  DefaultAudioPlayer.java  DefaultAudioPlayerManager.java  FunctionalResultHandler.java
main/src/main/java/com/sedmelluq/discord/lavaplayer/source/: AudioSourceManager.java  AudioSourceManagers.java  ProbingAudioSourceManager.java
main/src/main/java/com/sedmelluq/discord/lavaplayer/tools/: DataFormatTools.java  DecodedException.java  ExceptionTools.java  FriendlyException.java  FutureTools.java  GarbageCollectionMonitor.java  JsonBrowser.java  OrderedExecutor.java  PBJUtils.java  RingBufferMath.java  ThumbnailTools.java
main/src/main/java/com/sedmelluq/discord/lavaplayer/track/: AudioReference.java  AudioTrack.java  AudioTrackInfo.java  BaseAudioTrack.java  BasicAudioPlaylist.java  DelegatedAudioTrack.java  InternalAudioTrack.java  TrackMarker.java  TrackMarkerTracker.java  TrackStateListener.java
main/src/test/groovy/com/sedmelluq/discord/lavaplayer/integration/: LocalFormatSampleIndex.java  PlayerManagerTestTools.java
main/src/test/java/com/sedmelluq/discord/lavaplayer/natives/: NativeSmokeTest.java
natives/: CMakeLists.txt  build.gradle  build.gradle.kts  natives.gradle  versions.properties
natives-publish/: build.gradle  build.gradle.kts
natives-publish/src/main/resources/natives/darwin/: libconnector.dylib
natives/cmake/: toolchain-linux-aarch32.cmake  toolchain-linux-aarch64.cmake  toolchain-linux-arm.cmake  toolchain-linux-armhf.cmake  toolchain-linux-musl-aarch64.cmake  toolchain-linux-musl-x86-64.cmake  toolchain-linux-x86.cmake  toolchain-win-aarch64.cmake
natives/connector/: CMakeLists.txt  fdk-aac.c  math_hack.c  mpg123.c  opus.c  samplerate.c  vorbis.c
natives/fdk-aac/: CMakeLists.txt
natives/instructions/: docker-qemu.sh  linux-glibc-x86-64.sh  linux-musl-aarch64.sh  linux-musl-x86-64.sh  platforms.txt
natives/samplerate/: CMakeLists.txt  config.h
natives/scripts/: build-linux-deps.sh
natives/vorbis/: CMakeLists.txt
node/: build.gradle.kts
stream-merger/: build.gradle.kts
test-samples/: build.gradle.kts
testbot/: build.gradle.kts
testbot/src/main/java/com/sedmelluq/discord/lavaplayer/demo/: LocalPlayerDemo.java
(+240 files in other folders)
